Feature/workers (#2)
* feat(executor): add BackgroundExecutor for async tasks

* feat(audit): added async logging via blocking queue

* test(audit):
    1. added junit tests for BackgroundExecutor
    2. fixed AuditLogTest for async

* feat(commands):
    1. added Executor init in RBACSystem
    2. added async commands